--- a/core/build.gradle
+++ b/core/build.gradle
@@ -200,10 +200,10 @@ configure(core) {
         compile(group: "org.plutext", name: "jaxb-svg11", version: "1.0.2")
         compile(group: "org.plutext", name: "jaxb-xslfo", version: "1.0.1")
         compile(group: "org.plutext", name: "jaxb-xmldsig-core", version: "1.0.0")
-        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.8")
-        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.8")
-        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.8")
-        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.8")
+        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.10")
+        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.10")
+        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.10")
+        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.10")
         compile(group: "xalan", name: "xalan", version: "2.7.1")
         compile(group: "xalan", name: "serializer", version: "2.7.1")
         compile(group: "com.lowagie", name: "itext", version: "2.1.7") {
@@ -255,7 +255,7 @@ configure(core) {
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
         compile(group: "com.opencsv", name: "opencsv", version: "3.10")
         compile group: 'org.olap4j', name: 'olap4j', version: '1.2.0'
-        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.4.1") {
+        compile(group: "net.sf.jasperreports", name: "jasperreports", version: "6.7.0") {
             exclude(group: 'org.apache.lucene')
             exclude(group: 'commons-beanutils', module: 'commons-beanutils')
             exclude(group: 'com.google.zxing', module: 'core')
@@ -264,6 +264,7 @@ configure(core) {
             exclude(group: 'org.jfree')
             exclude(group: 'org.eclipse.jdt.core.compiler', module: 'ecj')
             exclude(group: 'com.lowagie', module: 'itext')
+            exclude(group: 'org.codehaus.castor', module: 'castor-xml')
         }
 
         testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.15')
